# nash-ai

./: .codereview.yml  .codereview.yml.example  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  INCIDENTS.md  LICENSE  README.md  SECURITY.md  docker-compose.worktree-db.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
apps/api/: alembic.ini  coverage.http.json  coverage_thresholds.json  nixpacks.toml  pyproject.toml  railway.toml  railway.worker.json
apps/api/.deepeval/: .deepeval_telemetry.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 03899c5db8ed_create_core_tables.py  1a2b3c4d5e6f_enable_rls_and_review_audit.py  4d5e6f7a8b9c_add_review_debug_artifacts.py  7e8f9a0b1c2d_add_model_audit_and_provider.py  9c1f4b2d7a8e_add_finding_outcomes_table.py  a1b2c3d4e5f6_merge_model_audit_and_outcomes_heads.py  b2c3d4e5f6a7_add_repo_ai_template_columns.py  c3d4e5f6a7b8_restore_reviews_model_provider_db_default.py  d4e5f6a7b8c9_allow_installation_read_listing.py  d9e0f1a2b3c4_add_fast_path_threshold_and_provider_metric_tables.py  e1f2a3b4c5d6_merge_threshold_metrics_heads.py  e6f7a8b9c0d1_merge_repo_template_and_installation_listing_heads.py  f7a8b9c0d1e2_add_llm_model_catalog.py  g8h9i0j1k2l3_wire_users_table.py  h9i0j1k2l3m4_add_user_provider_keys.py  i0j1k2l3m4n5_db_tightening.py  j1k2l3m4n5o6_add_benchmark_tables.py  k2l3m4n5o6p7_security_constraints.py  l3m4n5o6p7q8_user_table_rls.py  m4n5o6p7q8r9_add_review_context_snapshots.py  n5o6p7q8r9s0_add_installation_users_table.py  p6q7r8s9t0u1_add_review_github_node_id.py  q7r8s9t0u1v2_snapshot_retention_and_archive.py  r8s9t0u1v2w3_drop_user_rls_passthrough.py  s9t0u1v2w3x4_add_review_unique_pr_head_constraint.py  t0u1v2w3x4y5_add_external_eval_and_usage_tables.py  u1v2w3x4y5z6_add_review_shadow_benchmarks.py  u1v2w3x4y5z6_add_user_terms_acceptance_columns.py  v2w3x4y5z6a7_add_missed_issues_table.py  w3x4y5z6a7b8_add_finding_labels_table.py
apps/api/scripts/: check_coverage.py  generate_postgres_local_tls.py
apps/api/src/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/src/app/: categories.py  config.py  crypto.py  main.py  observability.py  ratelimit.py  serve_railway.py
apps/api/src/app/admin/: router.py
apps/api/src/app/agent/: acknowledgments.py  anchors.py  benchmark_shadow.py  chunked_runtime.py  chunking.py  config_cache.py  consistency_probe.py  consistency_probe_schema.py  constants.py  (+26 more)
apps/api/tests/: conftest.py  test_agent_chunked_runtime.py  test_agent_chunking.py  test_agent_context_builder.py  test_agent_fast_path.py  test_agent_finalize.py  test_agent_loop.py  test_agent_normalization.py  test_agent_profiler.py  test_agent_profiler_cache.py  test_agent_prompts_system.py  test_agent_provider_clients.py  test_agent_provider_neutral_callers.py  test_agent_review_config.py  test_agent_runner.py  test_agent_schema.py  test_agent_tools.py  test_agent_validator.py  test_agent_vendor_detect.py  test_api_auth.py  test_api_benchmarks.py  test_api_models_catalog.py  test_api_router.py  test_api_router_helpers.py  test_api_usage.py  test_api_usage_metrics.py  test_api_users.py  test_benchmark_shadow.py  test_config_cache.py  test_consistency_probe.py  test_database_transaction_isolation.py  test_database_url_tls.py  test_db_url.py  test_diff_parser.py  test_errors.py  test_external_eval_modules.py  test_external_evals_api.py  test_external_evals_helpers.py  test_fallback_chain.py  test_finding_outcomes.py  (+27 more)
apps/api/tests/deep_eval/: overlap_metric.py  test_external_review_deepeval.py  test_harness_smoke.py  test_review_golden.py
apps/api/tests/unit/: conftest.py  test_r2_rotation.py
(+345 files in other folders)
