[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"app.agent.prompts" = ["*.md", "*.yaml", "stacks/*.md"]
"app.llm.catalog" = ["*.yaml"]

[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "httpx>=0.27.0",
  "pyjwt[crypto]>=2.12.1",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "arq>=0.25.0",
  "redis>=5.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "cryptography>=42.0.0",
  "tiktoken>=0.7.0",
  "anthropic>=0.28.0",
  "unidiff>=0.7.5",
  "pyyaml>=6.0.3",
  "tree-sitter-language-pack>=1.6.2",
  "langfuse>=2.60.0",
  "sentry-sdk[fastapi]>=2.20.0",
  "openai>=2.32.0",
  "boto3>=1.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-cov>=6.0.0",
  "mypy>=1.10.0",
  "bandit>=1.7.10",
  "types-PyYAML>=6.0.12.20240808",
  "types-unidiff>=0.1.0",
  "pip-audit>=2.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
  "live_github: integration test that hits the real GitHub API",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true
warn_return_any = false
disallow_any_generics = false

[tool.bandit]
exclude_dirs = ["tests", "src/api.egg-info"]
