[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"app.agent.prompts" = ["*.md", "*.yaml", "stacks/*.md"]
"app.llm.catalog" = ["*.yaml"]

[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136.1",
  "uvicorn[standard]>=0.46.0",
  "httpx>=0.28.1",
  "pyjwt[crypto]>=2.12.1",
  "sqlalchemy[asyncio]>=2.0.49",
  "asyncpg>=0.31.0",
  "alembic>=1.18.4",
  "arq>=0.28.0",
  # redis-py <6 required by arq; 5.x clients work with Redis server 7+
  "redis>=7.4.0,<8",
  "pydantic>=2.13.3",
  "pydantic-settings>=2.14.0",
  "cryptography>=48.0.0",
  "tiktoken>=0.12.0",
  "anthropic>=0.99.0",
  "unidiff>=0.7.5",
  "pyyaml>=6.0.3",
  "tree-sitter-language-pack>=1.6.3,<1.6.4",
  "langfuse>=4.5.1",
  "sentry-sdk[fastapi]>=2.59.0",
  "openai>=2.34.0",
  "boto3>=1.43.4",
  "mcp>=1.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "mypy>=1.20.2",
  "bandit>=1.9.4",
  "types-PyYAML>=6.0.12.20260408",
  "types-unidiff>=0.7.0.20260408",
  "pip-audit>=2.10.0",
]
deepeval = [
  "deepeval>=3.9.9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
  "live_github: integration test that hits the real GitHub API",
  "live_llm: test that hits live LLM APIs",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true
warn_return_any = false
disallow_any_generics = false

[tool.bandit]
exclude_dirs = ["tests", "src/api.egg-info"]
